2003-03-07  David Hyatt  <hyatt@apple.com>

	Fix for time.com regression.  Don't allow text-decoration to
	apply to anchor elements with no href.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-03-07  David Hyatt  <hyatt@apple.com>

	Whoops. Fix regression causedb y previous checkin.
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-03-07  David Hyatt  <hyatt@apple.com>

	Make the :hover:active behavior much more sophisticated
	(and make it match WinIE, since that buggy browser is what
	necessitates this hack).
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:

2003-03-06  David Hyatt  <hyatt@apple.com>

	Fix for 3156125, regression on hiptop.com.  Caused by better
	nowrap handling perversely enough.  Need another quirk from
	Moz/WinIE to make this site behave.
	
        Reviewed by darin

        * khtml/rendering/render_table.cpp:
        (RenderTableCell::calcMinMaxWidth):
        (RenderTableCell::setStyle):

2003-03-06  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3191027 -- REGRESSION: KWQColor assert at aol.com front page

        * kwq/KWQColor.mm: (qRgb): Clamp to [0,0xFF] instead of asserting.

2003-03-06  Trey Matteson  <trey@apple.com>

	Refinement of routine that scans the DOM for field labels.
	We skip nodes that have no renderer, or are invisible.

        Reviewed by hyatt.

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::searchForLabelsBeforeElement): Added check.

2003-03-06  David Hyatt  <hyatt@apple.com>

	Fix for 3190580, tables should reset line-height and white-space
	in quirks mode.
	
        Reviewed by trey and john

        * khtml/css/quirks.css:

=== Safari-65 ===

2003-03-06  Darin Adler  <darin@apple.com>

        Reviewed by Don.

        - fixed 3177862 -- REGRESSION: can't upload widget at www.konfabulator.com

        * khtml/html/html_formimpl.cpp: