@@ -471,14 +471,23 @@ RenderStyle *CSSStyleSelector::styleForElement(ElementImpl *e)
         }
     }
 
-    // Mutate the display to BLOCK for certain cases, e.g., if someone attempts to
+    // Mutate the display to BLOCK or TABLE for certain cases, e.g., if someone attempts to
     // position or float an inline, compact, or run-in.
-    if ((style->display() == INLINE || style->display() == COMPACT || style->display() == RUN_IN) &&
-        (style->position() == ABSOLUTE || style->position() == FIXED || style->floating() != FNONE))
-        style->setDisplay(BLOCK);
+    if (style->position() == ABSOLUTE || style->position() == FIXED || style->floating() != FNONE) {
+        if (style->display() == INLINE || style->display() == COMPACT ||
+            style->display() == RUN_IN) // || style->display() == INLINE_BLOCK) FIXME!!!
+            style->setDisplay(BLOCK);
+        else if (style->display() == INLINE_TABLE)
+            style->setDisplay(TABLE);
+    }
 
-    // Finally update our text decorations in effect.
-    style->addToTextDecorationsInEffect(style->textDecoration());
+    // Finally update our text decorations in effect, but don't allow text-decoration to percolate through
+    // tables, inline blocks, inline tables, or run-ins.
+    if (style->display() == TABLE || style->display() == INLINE_TABLE || style->display() == RUN_IN)
+        // || style->display() == INLINE_BLOCK) FIXME!
+        style->setTextDecorationsInEffect(style->textDecoration());
+    else
+        style->addToTextDecorationsInEffect(style->textDecoration());
 
     // Now return the style.
     return style;
@@ -2883,16 +2892,7 @@ void CSSStyleSelector::applyRule( int id, DOM::CSSValueImpl *value )
 		}
 	    }
         }
-
-        // In quirks mode, we simply ignore text-decoration declarations on links with no href.
-        // People write lousy stylesheets (e.g., the articles on time.com) where they say:
-        // a { text-decoration: underline; }
-        // instead of:
-        // :link { text-decoration: underline; }
-        // So <a name="foo"> that wraps a bunch of content ends up causing underlines to be drawn.
-        if (strictParsing || element->id() != ID_A || element->hasAnchor())
-            style->setTextDecoration(t);
-	break;
+        break;
     }
     case CSS_PROP__KONQ_FLOW_MODE:
         if(value->cssValueType() == CSSValue::CSS_INHERIT)
