@@ -1,5 +1,14 @@
 2003-03-07  David Hyatt  <hyatt@apple.com>
 
+        better fix for text-decoration issue on time.com.  
+	
+        Reviewed by mjs
+
+        * khtml/css/cssstyleselector.cpp:
+        * khtml/rendering/render_style.h:
+
+2003-03-07  David Hyatt  <hyatt@apple.com>
+
 	Fix for time.com regression.  Don't allow text-decoration to
 	apply to anchor elements with no href.
 	
